fix: SecurityConfig 단순화
- 필수 설정만 남겨놓고 삭제