@@ -2,20 +2,12 @@ package com.commi.chu.global.security.config;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.env.Environment;
-import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -26,80 +18,40 @@ import java.util.List;
 @Slf4j
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
 
     @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
-
-    @Value("${app.domain.cors-origins}")
-    private List<String> allowedOrigins;
-
-    private final JwtTokenProvider jwtTokenProvider;
-
-    @Autowired(required = false)
-    private DevAuthenticationFilter devAuthenticationFilter;
-
-    private final Environment environment;
-
-    @Bean
-    public JwtAuthenticationFilter jwtAuthenticationFilter() {
-        return new JwtAuthenticationFilter(jwtTokenProvider);
-    }
-
-
-    @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))  // prefilght(OPTIONS) 처리 목적 추가
+                // 1. CORS 설정을 직접 여기서 정의합니다.
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                // 2. CSRF 보호 기능을 비활성화합니다.
                 .csrf(AbstractHttpConfigurer::disable)
-                .sessionManagement(session ->
-                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-                .authorizeHttpRequests(authorize ->
-                        authorize
-                                .requestMatchers("/api/**").permitAll()
-                                .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
-                                .requestMatchers("/actuator/**").permitAll()
-                                .anyRequest().authenticated()
+                // 3. 지금은 세션 관리 정책을 설정하지 않아도 괜찮습니다. (주석 처리 또는 삭제)
+                // .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+                // 4. 모든 요청을 허용하도록 변경합니다.
+                .authorizeHttpRequests(authorize -> authorize
+                        .anyRequest().permitAll()
                 );
 
-        // 개발 환경 필터는 조건부로 추가
-//        if (isDevOrLocalProfile() && devAuthenticationFilter != null) {
-        log.info("개발 환경 인증 필터를 추가합니다.");
-        http.addFilterBefore(devAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-//        }
-        http.addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    private boolean isDevOrLocalProfile() {
-        return Arrays.stream(environment.getActiveProfiles())
-                .anyMatch(profile -> profile.equals("dev") || profile.equals("local"));
-    }
-
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(allowedOrigins);
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization", "Content-Type", "X-Requested-With",
-                "Access-Control-Allow-Credentials", "Access-Control-Allow-Origin", "Access-Control-Allow-Headers",
-                "Accept", "Origin", "Cookie", "Set-Cookie", "X-DEV-USER",
-                "Cache-Control", "Connection", "x-request-id"
-        ));
-        configuration.setExposedHeaders(List.of("Set-Cookie"));
+
+        // 프론트엔드 개발 서버 주소(React)를 허용합니다.
+        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE"));
+        configuration.setAllowedHeaders(List.of("*")); // 모든 헤더를 허용합니다.
         configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**", configuration);
+        source.registerCorsConfiguration("/**", configuration); // 모든 경로에 대해 이 설정을 적용합니다.
         return source;
     }
 }
